# NGHW

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
Projects/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  NGHW.sln  NGHW.vcxproj  NGHW.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Sources/: Main.cpp
